# NP-Semesterprojekt

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-7eb7d9dbe2e64e77354d.json  cmakeFiles-v1-34519423716afa90b304.json  codemodel-v2-f4a4299ec54b50447352.json  directory-src.Inventory.inventoryLib-Debug-c398671196b8e6fd3f3b.json  directory-src.Inventory.itemLib-Debug-60f01ec96bb5b34faccc.json  directory-src.Inventory.messagesLib-Debug-1cefa7354e6936606b0c.json  index-2022-11-29T14-45-41-0384.json  target-NP_Semesterprojekt-Debug-ad1c0e0a5e32c6187c2a.json  target-inventoryLib-Debug-55b7a8d0a1a9070efbe3.json  target-itemLib-Debug-c339d62c2b06a915df71.json  target-messagesLib-Debug-5ba9c8b94b854ce64112.json  toolchains-v1-9727574d697ce9eeb8d5.json
Testing/: testhall.cpp  testhall.h
src/: CMakeLists.txt  Warehouse.cpp  Warehouse.h  main.cpp  main.hpp
src/ConveyorBelt/: CMakeLists.txt  Container.cpp  Container.h  ConveyorBelt.h  ConveyorBeltRetrieve.cpp  ConveyorBeltRetrieve.h  ConveyorBeltStore.cpp  ConveyorBeltStore.h  IPoint.cpp  IPoint.h  KPoint.cpp  KPoint.h  Timer.h  TransferPoint.cpp  TransferPoint.h
src/Inventory/: CMakeLists.txt  Container.cpp  Container.h  ContainerUse.cpp  ContainerUse.h  Inventory.cpp  Inventory.h  Segment.cpp  Segment.h  SegmentUse.h  Shelf.cpp  Shelf.h  ShelfContainer.cpp  ShelfContainer.h  ShelfPair.cpp  ShelfPair.h
src/Inventory/inventoryLib/: CMakeLists.txt  Container.cpp  Container.h  Inventory.cpp  Inventory.h  Shelf.cpp  Shelf.h  ShelfPair.cpp  ShelfPair.h  cmake_install.cmake
src/Inventory/itemLib/: CMakeLists.txt  Item.cpp  Item.h  Priority.h  cmake_install.cmake
src/Inventory/messagesLib/: CMakeLists.txt  TimeSegmentMessage.h  TransferMessage.cpp  TransferMessage.h  cmake_install.cmake
src/Item/: CMakeLists.txt  Container.cpp  Container.h  Item.cpp  Item.h  Priority.h  Timer.cpp
src/Messages/: CMakeLists.txt  SegmentDataMessage.cpp  SegmentDataMessage.h  TimeSegmentMessage.cpp  TimeSegmentMessage.h  TransferMessage.cpp  TransferMessage.h
src/PersistentFileManagement/: CMakeLists.txt  Documentation.md  PersistentFileManagement.cpp  PersistentFileManagement.hpp  json.cpp  json.hpp  test.cpp
